Make sure Google Attribution is always visible

--- a/app/components/ui/search-input/styles.scss
+++ b/app/components/ui/search-input/styles.scss
@@ -135,7 +135,7 @@
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 	left: 0;
 	max-width: 400px;
-	padding: 20px 10px;
+	padding: 15px 10px;
 	position: absolute;
 	top: 45px;
 	width: calc(100vw - 50px);
@@ -147,15 +147,16 @@
 		margin: 0 0 5px;
 	}
 
-	ul {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-	}
-
 	strong {
 		font-weight: bold;
 	}
+}
+
+.related-words-list {
+	align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .related-words-enter {
@@ -174,6 +175,12 @@
 .related-words-leave-active {
 	opacity: 0.01;
 	transition: opacity 0.2s ease-in-out;
+}
+
+.google-translate-attribution {
+	margin-left: auto;
+	margin-right: 2px;
+	margin-top: 17px;
 }
 
 .related-words-list-item {
@@ -200,8 +207,4 @@
 	@include breakpoint( '>480px' ) {
 		flex-basis: 48%;
 	}
-}
-
-.is-google-translate-attribution-visible {
-	background: $white url( /images/powered-by-google-translate.png ) no-repeat bottom right;
 }
